--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,25 +1,62 @@
-name: Build
+name: Build Termux:GUI APK
 
 on:
-  release:
-    types: [published]
   push:
-    branches:
-    - main
-  
-  
+    branches: [ main, master ]
+  pull_request:
+    branches: [ main, master ]
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
-    - name: Clone repository
-      uses: actions/checkout@v4
-    - name: Build
-      run: ./gradlew assembleDebugMinify
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
+    - name: Checkout repository
+      uses: actions/checkout@v3
+      
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
       with:
-        name: termux-gui-debug.apk
-        path: ./app/build/outputs/apk/debugMinify/app-debugMinify.apk
+        java-version: '17'
+        distribution: 'temurin'
+        
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v2
+      
+    - name: Cache Gradle packages
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
+          
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+      
+    - name: Build debug APK
+      run: ./gradlew assembleDebug
+      
+    - name: Build release APK
+      run: ./gradlew assembleRelease
+      
+    - name: Sign APK (optional)
+      if: github.event_name == 'push'
+      run: |
+        # You can add signing configuration here if needed
+        echo "APK built successfully"
+        
+    - name: Upload Debug APK
+      uses: actions/upload-artifact@v3
+      with:
+        name: termux-gui-debug
+        path: app/build/outputs/apk/debug/*.apk
+        
+    - name: Upload Release APK
+      uses: actions/upload-artifact@v3
+      with:
+        name: termux-gui-release
+        path: app/build/outputs/apk/release/*.apk
