--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,20 +37,11 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
       
-    - name: Build debug APK
-      run: ./gradlew assembleDebug
+    - name: Build APK
+      run: ./gradlew :app:assembleRelease
       
-    - name: Build release APK
-      run: ./gradlew assembleRelease
-      
-    - name: Upload Debug APK
+    - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
-        name: termux-gui-debug
-        path: app/build/outputs/apk/debug/*.apk
-        
-    - name: Upload Release APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: termux-gui-release
+        name: termux-gui-app
         path: app/build/outputs/apk/release/*.apk
